--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -50,9 +50,6 @@
   <br>
 
 
-  <button style="background-position:center; position: center", class="with-delay">
-    <%= link_to 'Создать Новости', products_path, class: "btn btn-mini btn-warning", type: "button"%>
-  </button>
 
 <br><br>
 </br>
@@ -67,8 +64,8 @@
     <p>Александр</p>
 
     <h3>Поделиться</h3>
-    <a href="www.facebook.com"><img src="assets/facebook.png" alt="facebook"></a>
-    <a href="www.instagram.com"><img src="assets/instagram.png" alt="instagram"></a>
+    <a href="#"><img src="assets/facebook.png" alt="facebook"></a>
+    <a href="#"><img src="assets/instagram.png" alt="instagram"></a>
     <h3>Где нас можно найти?</h3>
     <p>Г. Одесса, промрынок "7 км", ул Престижная, 455.</p>
     <p>Ассортимент на сайте может отличаться от фактического.</p>
