--- a/app/views/for_men/_form.html.erb
+++ b/app/views/for_men/_form.html.erb
@@ -37,6 +37,6 @@
   </div>
 
   <div class="actions">
-    <%= form.submit "✔" %>
+    <%= form.submit "✔", class: "alert alert-success" %>
   </div>
 <% end %>
