--- a/app/views/for_men/index.html.erb
+++ b/app/views/for_men/index.html.erb
@@ -1,12 +1,12 @@
-<p id="notice"><%= notice %></p>
+<<br><br><br>
 
 <h1>For Men</h1>
 
 <table>
   <thead>
     <tr>
-      <th>Name</th>
-      <th>Description</th>
+      <th>/</th>
+      <th>/</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -26,5 +26,8 @@
 </table>
 
 <br>
+<div class="1 navbar-nav pull-xs-rigth">
+  <strong><%= link_to 'Создать', new_for_man_path, class: "btn btn-mini btn-warning", type: "button" %></strong>
+</div>
+<br>
 
-<%= link_to 'Создать', new_for_man_path %>
