--- a/app/views/for_women/index.html.erb
+++ b/app/views/for_women/index.html.erb
@@ -17,9 +17,9 @@
         <td><%= image_tag for_woman.womanavtr.thumb.url %></td>
         <td><%= for_woman.name %></td>
         <td><%= for_woman.description %></td>
-        <td><%= link_to 'Просмотр', for_woman %></td>
-        <td><%= link_to 'Редактировани', edit_for_woman_path(for_woman) %></td>
-        <td><%= link_to 'Удалить', for_woman, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to 'Просмотр', for_woman, class: "alert alert-info" %></td>
+        <td><%= link_to 'Редактировани', edit_for_woman_path(for_woman), class: "alert alert-warning" %></td>
+        <td><%= link_to 'Удалить', for_woman, method: :delete, class: "alert alert-danger", data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
@@ -27,4 +27,7 @@
 
 <br>
 
-<%= link_to 'Создать', new_for_woman_path %>
+
+<div style="background-position:center; position: center", class="with-delay">
+  <%= link_to 'Создать Новое Мужское', new_for_woman_path, class: "btn btn-mini btn-warning", type: "button"%>
+</div>
