--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -5,18 +5,19 @@
                             :alt => "rss feed", id:'ievtushenko_logo'), root_path) %></div><!--тут ссылка на картинку-->
     <div class="container">
 
-      <div class="container search_margin_top"
-           style="width:35%; padding-top: 20px; padding-left: 150px; float: right">
+      <div class="container search_margin_top glyphicon", style="width:35%; padding-top: 20px; padding-left: 150px; float: right">
+
         <%= form_with url: search_url, local: true, method: :get do |form| %>
           <%= form.text_field :q, :size =>"40", placeholder: "Введите слово",
-                              data:{behavior: "autocomplete"}, class: "form-control width_of_search" %>
+                              data:{behavior: "autocomplete"}, class: "form-control width_of_search " %>
           <div class="ttt" style="padding-top: 5px; float: inherit; text-align: right;">
             <%= form.button "Поиск", class: "btn btn-large btn-primary" %>
           </div>
         <% end %>
+
       </div>
 
-      <div class="p1"> <%= link_to "Редактировать Новости", products_url, id: "logo" %></div>
+      <div class="p1"> <%= link_to "Админка", adminka_url, id: "logo" %></div>
 
       <nav class="nav pull-right buttons">
         <p class="static_page" style="">
