--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -39,6 +39,6 @@
   </div>
 
   <div class="actions">
-    <%= form.submit "✔" %>
+    <%= form.submit "✔", class: "alert alert-success" %>
   </div>
 <% end %>
