--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -19,9 +19,9 @@
         <td><%= image_tag product.image.thumb.url %></td>
         <td><%= product.name %></td>
         <td><%= product.description %></td>
-        <td><%= link_to 'Просмотр', product %></td>
-        <td><%= link_to 'Редактировать', edit_product_path(product) %></td>
-        <td><%= link_to 'Удалить', product, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to 'Просмотр', product, class: "alert alert-info" %></td>
+        <td><%= link_to 'Редактировать', edit_product_path(product), class: "alert alert-warning" %></td>
+        <td><%= link_to 'Удалить', product, method: :delete, class: "alert alert-danger", data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
