--- a/app/views/static_pages/women.html.erb
+++ b/app/views/static_pages/women.html.erb
@@ -16,18 +16,15 @@
   <tbody>
   <% @for_women.each do |for_woman| %>
     <tr>
-      <td><%= image_tag for_woman.womanavtr.thumb.url %></td>
+      <td><%= link_to (image_tag for_woman.womanavtr.thumb.url), for_woman %></td>
       <td><%= for_woman.name %></td>
       <td><%= for_woman.description %></td>
-      <td><%= link_to 'Просмотр', for_woman %></td>
-      <td><%= link_to 'Редактировать', edit_for_woman_path(for_woman) %></td>
-      <td><%= link_to 'Удалить', for_woman, method: :delete, data: { confirm: 'Вы уверенны, что хотите удалить?' } %></td>
     </tr>
   <% end %>
   </tbody>
 </table><br><br>
 
-<button style="background-position:center; position: center", class="with-delay">
-  <%= link_to 'Создать Новое', new_for_woman_path, class: "btn btn-mini btn-warning", type: "button"%>
-</button>
+<!--<div style="background-position:center; position: center", class="with-delay">-->
+  <!--<%#= link_to 'Создать Новое', new_for_woman_path, class: "btn btn-mini btn-warning", type: "button"%>-->
+<!--</div>-->
 <br>
