--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -2,61 +2,135 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <!--<link rel="stylesheet" src="assets/custom.css">-->
   <title>Ievtushenko Production | <%= yield(:title) %></title>
+  <!--<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">-->
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   <style>
-
+    .carousel-inner > .item > img,
+    .carousel-inner > .item > a > img {
+      width: 70%;
+      margin: auto;
+    }
   </style>
 </head>
 
 
 <body>
+<br> <br>
 
-<div class="slider">
-  <% @products.each do |product|%>
-  <div class="slide">
-      <%= image_tag product.image.url  alt: "slide1"  %>
-      <br><br>
+<!--Слайдер///////////////////////////////////////-->
+<div class="container">
+
+  <br> <br>
+  <div id="myCarousel" class="carousel slide" data-ride="carousel">
+    <!-- Indicators -->
+    <ol class="carousel-indicators">
+      <li data-target="#myCarousel" data-slide-to="0"></li>
+      <li data-target="#myCarousel" data-slide-to="1"></li>
+      <li data-target="#myCarousel" data-slide-to="2"></li>
+      <li data-target="#myCarousel" data-slide-to="3"></li>
+    </ol>
+
+    <!-- Wrapper for slides -->
+    <div class="carousel-inner" role="listbox">
+
+      <div class="item active">
+        <img src="assets/Home_image1.png" alt="Chania" width="460" height="345">
+        <div class="carousel-caption">
+          <h3 style="font-size: x-large; color: #ddd9a9;">Пижама 1</h3>
+          <p style="color: #ddd9a9;">Тут будет какаято новость по этому белью.</p>
+        </div>
+      </div>
+
+      <div class="item">
+
+        <img src="assets/Home_image2.png" alt="Chania" width="460" height="345">
+        <div class="carousel-caption">
+          <h3 style="font-size: x-large; color: #ddd9a9;">Пижама 2</h3>
+          <p style="color: #ddd9a9;">Тут Будет Новость по 2й Пижаме</p>
+        </div>
+      </div>
+
+      <div class="item">
+        <img src="assets/Home_image3.png" alt="Flower" width="460" height="345">
+        <div class="carousel-caption">
+          <h3 style="font-size: x-large; color: #ddd9a9;">Пижама 3</h3>
+          <p style="color: #ddd9a9;">Новости по 3й Пижаме</p>
+        </div>
+      </div>
+
+      <div class="item">
+        <img src="assets/Home_image4.png" alt="Flower" width="460" height="345">
+        <div class="carousel-caption">
+          <h3 style="font-size: x-large; color: #ddd9a9;">Пижама</h3>
+          <p style="color: #ddd9a9;">Новости по 4й Пижаме</p>
+        </div>
+      </div>
+
+    </div>
+
+    <!-- Left and right controls -->
+    <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+      <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next"> <!--role="button"-->
+      <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+      <span class="sr-only">Next</span>
+    </a>
   </div>
-  <% end %>
 </div>
 
-<div class="catalog">
+<!--Мужское и Женское///////////////////////////////////////-->
+<br> <br>
 
 
-  <div>
-    <% @for_men.each do |for_man| %>
-    <a href=""  data-fancybox data-caption="(<%= for_man.description %>)">
-    <%= image_tag for_man.avatar.thumb.url %>
-    </a>
-    <h3><%= for_man.name %></h3>
-    <h3></h3>
-  </div>
-    <% end %>
 
 
-    <div>
-      <% @for_women.each do |for_woman| %>
-        <a href=""  data-fancybox data-caption="<%= for_woman.description %>">
-          <%= image_tag for_woman.womanavtr.thumb.url %>
-        </a>
-        <h3><%= for_woman.name %></h3>
-        <h3></h3>
-        </div>
-      <% end %>
+<!--Мужское и Женское на Руби///////////////////////////////////////-->
+<!--<div class="slider">-->
+  <!--<%# @products.each do |product|%>-->
+    <!--<div class="slide">-->
+        <!--<%#= image_tag product.image.url  alt: "slide1"  %>-->
+        <!--<br><br>-->
+    <!--</div>-->
+    <!--<%# end %>-->
+  <!--</div>-->
 
-  </div>
+<!--<div class="catalog">-->
+
+  <!--<div>-->
+    <!--<%# @for_men.each do |for_man| %>-->
+    <!--<a href=""  data-fancybox data-caption="(<%#= for_man.description %>)">-->
+    <!--<%#= image_tag for_man.avatar.thumb.url %>-->
+    <!--</a>-->
+    <!--<h3><%#= for_man.name %></h3>-->
+    <!--<h3></h3>-->
+  <!--</div>-->
+    <!--<%# end %>-->
+
+    <!--<div>-->
+      <!--<%# @for_women.each do |for_woman| %>-->
+        <!--<a href=""  data-fancybox data-caption="<%#= for_woman.description %>">-->
+          <!--<%#= image_tag for_woman.womanavtr.thumb.url %>-->
+        <!--</a>-->
+        <!--<h3><%#= for_woman.name %></h3>-->
+        <!--<h3></h3>-->
+        <!--</div>-->
+      <!--<%# end %>-->
+  <!--</div>-->
 
   <br>
 
-
-
+<!--Footer///////////////////////////////////////////////////////////-->
 <br><br>
 </br>
 <footer>
   <div class="service">
     <h3>Сервис</h3>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero laudantium at fugiat, consectetur iure repudiandae! Earum illum laborum atque, quod odit, quam reprehenderit ut perspiciatis! Optio at porro atque consequatur.</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero laudantium at fugiat,
+      consectetur iure repudiandae! Earum illum laborum atque, quod odit, quam reprehenderit ut perspiciatis!
+      Optio at porro atque consequatur.</p>
   </div>
   <div class="contacts">
     <h3>Контакты</h3>
