--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -38,7 +38,7 @@
         <img src="assets/Home_image1.png" alt="Chania" width="460" height="345">
         <div class="carousel-caption">
           <h3 style="font-size: x-large; color: #ddd9a9;">Пижама 1</h3>
-          <p style="color: #ddd9a9;">Тут будет какаято новость по этому белью.</p>
+          <p style="color: #ddd9a9;">Тут Будет Новость по 1й Пижаме</p>
         </div>
       </div>
 
@@ -62,7 +62,7 @@
       <div class="item">
         <img src="assets/Home_image4.png" alt="Flower" width="460" height="345">
         <div class="carousel-caption">
-          <h3 style="font-size: x-large; color: #ddd9a9;">Пижама</h3>
+          <h3 style="font-size: x-large; color: #ddd9a9;">Пижама 4</h3>
           <p style="color: #ddd9a9;">Новости по 4й Пижаме</p>
         </div>
       </div>
@@ -71,11 +71,11 @@
 
     <!-- Left and right controls -->
     <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
-      <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+      <span class="glyphicon " aria-hidden="true"></span>
       <span class="sr-only">Previous</span>
     </a>
     <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next"> <!--role="button"-->
-      <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+      <span class="glyphicon " aria-hidden="true"></span>
       <span class="sr-only">Next</span>
     </a>
   </div>
@@ -84,7 +84,67 @@
 <!--Мужское и Женское///////////////////////////////////////-->
 <br> <br>
 
+<div class="catalog">
+  <!--Женские Пижамы///-->
 
+  <div class="women_underwear">
+    <a href="assets/Pigiama_gimp_out_label.png" data-fancybox data-caption="Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit dolor earum dolores iste maxime asperiores reprehenderit obcaecati excepturi quis minus hic, vel magni nam, molestias, fugit quod explicabo? Expedita, totam!
+			"><img src="assets/Pigiama_gimp_out_label.png" alt="photo"/></a>
+    <h3>499 грн</h3>
+    <a href="#"></a>
+  </div>
+  <div class="women_underwear">
+    <a href="assets/Pigiama2_gimp_out_label.png" data-fancybox data-caption="Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit dolor earum dolores iste maxime asperiores reprehenderit obcaecati excepturi quis minus hic, vel magni nam, molestias, fugit quod explicabo? Expedita, totam!
+			"><img src="assets/Pigiama2_gimp_out_label.png" alt="photo"/></a>
+    <h3>499 грн</h3>
+  </div>
+  <div class="women_underwear">
+    <a href="assets/Pigiama3_gimp_out_label.png" data-fancybox data-caption="Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit dolor earum dolores iste maxime asperiores reprehenderit obcaecati excepturi quis minus hic, vel magni nam, molestias, fugit quod explicabo? Expedita, totam!
+			"><img src="assets/Pigiama3_gimp_out_label.png" alt="photo"/></a>
+    <h3>499 грн</h3>
+  </div>
+  <div class="women_underwear">
+    <a href="assets/Pigiama4_gimp_out_label.png" data-fancybox data-caption="Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit dolor earum dolores iste maxime asperiores reprehenderit obcaecati excepturi quis minus hic, vel magni nam, molestias, fugit quod explicabo? Expedita, totam!
+			"><img src="assets/Pigiama4_gimp_out_label.png" alt="photo"/></a>
+    <h3>499 грн</h3>
+  </div>
+
+  <div class="women_underwear">
+    <a href="assets/Pigiama5_gimp_out_label.png" data-fancybox data-caption="Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit dolor earum dolores iste maxime asperiores reprehenderit obcaecati excepturi quis minus hic, vel magni nam, molestias, fugit quod explicabo? Expedita, totam!
+			"><img src="assets/Pigiama5_gimp_out_label.png" alt="photo"/></a>
+    <h3>499 грн</h3>
+  </div>
+  <!--Мужское белье///-->
+<br>
+  <div class="men_underwear">
+    <a href="assets/Men_underwear1_gimp_out_label.png" data-fancybox data-caption="Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit dolor earum dolores iste maxime asperiores reprehenderit obcaecati excepturi quis minus hic, vel magni nam, molestias, fugit quod explicabo? Expedita, totam!
+			"><img src="assets/Men_underwear1_gimp_out_label.png" alt="photo"/></a>
+    <h3>499 грн</h3>
+  </div>
+  <div class="men_underwear">
+    <a href="assets/Men_underwear2_gimp_out_label.png" data-fancybox data-caption="Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit dolor earum dolores iste maxime asperiores reprehenderit obcaecati excepturi quis minus hic, vel magni nam, molestias, fugit quod explicabo? Expedita, totam!
+			"><img src="assets/Men_underwear2_gimp_out_label.png" alt="photo"/></a>
+    <h3>499 грн</h3>
+  </div>
+  <div class="men_underwear">
+    <a href="assets/Men_underwear3_gimp_out_label.png" data-fancybox data-caption="Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit dolor earum dolores iste maxime asperiores reprehenderit obcaecati excepturi quis minus hic, vel magni nam, molestias, fugit quod explicabo? Expedita, totam!
+			"><img src="assets/Men_underwear3_gimp_out_label.png" alt="photo"/></a>
+    <h3>499 грн</h3>
+  </div>
+  <div class="men_underwear">
+    <a href="assets/Men_underwear4_gimp_out_label.png" data-fancybox data-caption="Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit dolor earum dolores iste maxime asperiores reprehenderit obcaecati excepturi quis minus hic, vel magni nam, molestias, fugit quod explicabo? Expedita, totam!
+			"><img src="assets/Men_underwear4_gimp_out_label.png" alt="photo"/></a>
+    <h3>499 грн</h3>
+  </div>
+
+  <div class="men_underwear">
+    <a href="assets/Men_underwear5_gimp_out_label.png" data-fancybox data-caption="Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit dolor earum dolores iste maxime asperiores reprehenderit obcaecati excepturi quis minus hic, vel magni nam, molestias, fugit quod explicabo? Expedita, totam!
+			"><img src="assets/Men_underwear5_gimp_out_label.png" alt="photo"/></a>
+    <h3>499 грн</h3>
+  </div>
+
+
+</div>
 
 
 <!--Мужское и Женское на Руби///////////////////////////////////////-->
