--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -82,11 +82,11 @@
 </div>
 
 <!--Мужское и Женское///////////////////////////////////////-->
+<!--Женские Пижамы///-->
 <br> <br>
-
+<h1>Женские Пижамы</h1>
+<br>
 <div class="catalog">
-  <!--Женские Пижамы///-->
-
   <div class="women_underwear">
     <a href="assets/Pigiama_gimp_out_label.png" data-fancybox data-caption="Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit dolor earum dolores iste maxime asperiores reprehenderit obcaecati excepturi quis minus hic, vel magni nam, molestias, fugit quod explicabo? Expedita, totam!
 			"><img src="assets/Pigiama_gimp_out_label.png" alt="photo"/></a>
@@ -109,13 +109,19 @@
     <h3>499 грн</h3>
   </div>
 
-  <div class="women_underwear">
-    <a href="assets/Pigiama5_gimp_out_label.png" data-fancybox data-caption="Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit dolor earum dolores iste maxime asperiores reprehenderit obcaecati excepturi quis minus hic, vel magni nam, molestias, fugit quod explicabo? Expedita, totam!
-			"><img src="assets/Pigiama5_gimp_out_label.png" alt="photo"/></a>
-    <h3>499 грн</h3>
-  </div>
+  <!--<div class="women_underwear">-->
+    <!--<a href="assets/Pigiama5_gimp_out_label.png" data-fancybox data-caption="Lorem ipsum dolor sit amet, -->
+    <!--consectetur adipisicing elit. Odit dolor earum dolores iste maxime asperiores reprehenderit obcaecati -->
+    <!--excepturi quis minus hic, vel magni nam, molestias, fugit quod explicabo? Expedita, totam!">-->
+      <!--<img src="assets/Pigiama5_gimp_out_label.png" alt="photo"/></a>-->
+    <!--<h3>499 грн</h3>-->
+  <!--</div>-->
+</div>
+<hr>
   <!--Мужское белье///-->
+<h1>Мужское белье</h1>
 <br>
+<div class="catalog">
   <div class="men_underwear">
     <a href="assets/Men_underwear1_gimp_out_label.png" data-fancybox data-caption="Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit dolor earum dolores iste maxime asperiores reprehenderit obcaecati excepturi quis minus hic, vel magni nam, molestias, fugit quod explicabo? Expedita, totam!
 			"><img src="assets/Men_underwear1_gimp_out_label.png" alt="photo"/></a>
@@ -137,14 +143,14 @@
     <h3>499 грн</h3>
   </div>
 
-  <div class="men_underwear">
-    <a href="assets/Men_underwear5_gimp_out_label.png" data-fancybox data-caption="Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit dolor earum dolores iste maxime asperiores reprehenderit obcaecati excepturi quis minus hic, vel magni nam, molestias, fugit quod explicabo? Expedita, totam!
-			"><img src="assets/Men_underwear5_gimp_out_label.png" alt="photo"/></a>
-    <h3>499 грн</h3>
-  </div>
-
-
+  <!--<div class="men_underwear">-->
+    <!--<a href="assets/Men_underwear5_gimp_out_label.png" data-fancybox data-caption="Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit dolor earum dolores iste maxime asperiores reprehenderit obcaecati excepturi quis minus hic, vel magni nam, molestias, fugit quod explicabo? Expedita, totam!-->
+			<!--"><img src="assets/Men_underwear5_gimp_out_label.png" alt="photo"/></a>-->
+    <!--<h3>499 грн</h3>-->
+  <!--</div>-->
 </div>
+
+
 
 
 <!--Мужское и Женское на Руби///////////////////////////////////////-->
