--- a/app/views/static_pages/men.html.erb
+++ b/app/views/static_pages/men.html.erb
@@ -5,28 +5,60 @@
 <button style="background-position:center; position: center", class="with-delay">
   <%= link_to 'Назад', :back, class: "btn btn-mini btn-info", type: "button" %>
 </button>
-<table>
-  <thead>
-  <tr>
-    <th>.</th>
-    <th>.</th>
-    <th colspan="3"></th>
-  </tr>
-  </thead>
 
-  <tbody>
-  <% @for_men.each do |for_man| %>
-    <tr>
-      <td><%= link_to (image_tag for_man.avatar.thumb.url), for_man %></td>
-      <td><%= for_man.name %></td>
-      <td><%= for_man.description %></td>
-      <td><%= link_to 'Просмотр', for_man, class: "alert alert-info" %></td>
-    </tr>
-  <% end %>
-  </tbody>
-</table>
+<h1>Мужское белье</h1>
 <br>
-<!--<div style="background-position:center; position: center", class="with-delay">-->
-  <!--<%#= link_to 'Создать Новое', new_for_man_path, class: "btn btn-mini btn-warning", type: "button"%>-->
-<!--</div>-->
-<br>
+<div class="catalog">
+  <div class="men_underwear">
+    <a href="assets/Men_underwear1_gimp_out_label.png" data-fancybox data-caption="Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit dolor earum dolores iste maxime asperiores reprehenderit obcaecati excepturi quis minus hic, vel magni nam, molestias, fugit quod explicabo? Expedita, totam!
+			"><img src="assets/Men_underwear1_gimp_out_label.png" alt="photo"/></a>
+    <h3>499 грн</h3>
+  </div>
+  <div class="men_underwear">
+    <a href="assets/Men_underwear2_gimp_out_label.png" data-fancybox data-caption="Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit dolor earum dolores iste maxime asperiores reprehenderit obcaecati excepturi quis minus hic, vel magni nam, molestias, fugit quod explicabo? Expedita, totam!
+			"><img src="assets/Men_underwear2_gimp_out_label.png" alt="photo"/></a>
+    <h3>499 грн</h3>
+  </div>
+  <div class="men_underwear">
+    <a href="assets/Men_underwear3_gimp_out_label.png" data-fancybox data-caption="Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit dolor earum dolores iste maxime asperiores reprehenderit obcaecati excepturi quis minus hic, vel magni nam, molestias, fugit quod explicabo? Expedita, totam!
+			"><img src="assets/Men_underwear3_gimp_out_label.png" alt="photo"/></a>
+    <h3>499 грн</h3>
+  </div>
+  <div class="men_underwear">
+    <a href="assets/Men_underwear4_gimp_out_label.png" data-fancybox data-caption="Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit dolor earum dolores iste maxime asperiores reprehenderit obcaecati excepturi quis minus hic, vel magni nam, molestias, fugit quod explicabo? Expedita, totam!
+			"><img src="assets/Men_underwear4_gimp_out_label.png" alt="photo"/></a>
+    <h3>499 грн</h3>
+  </div>
+
+  <div class="men_underwear">
+  <a href="assets/Men_underwear5_gimp_out_label.png" data-fancybox data-caption="Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit dolor earum dolores iste maxime asperiores reprehenderit obcaecati excepturi quis minus hic, vel magni nam, molestias, fugit quod explicabo? Expedita, totam!
+  "><img src="assets/Men_underwear5_gimp_out_label.png" alt="photo"/></a>
+  <h3>499 грн</h3>
+  </div>
+</div>
+
+<!--<table>-->
+  <!--<thead>-->
+  <!--<tr>-->
+    <!--<th>.</th>-->
+    <!--<th>.</th>-->
+    <!--<th colspan="3"></th>-->
+  <!--</tr>-->
+  <!--</thead>-->
+
+  <!--<tbody>-->
+  <!--<%# @for_men.each do |for_man| %>-->
+    <!--<tr>-->
+      <!--<td><%#= link_to (image_tag for_man.avatar.thumb.url), for_man %></td>-->
+      <!--<td><%#= for_man.name %></td>-->
+      <!--<td><%#= for_man.description %></td>-->
+      <!--<td><%#= link_to 'Просмотр', for_man, class: "alert alert-info" %></td>-->
+    <!--</tr>-->
+  <!--<%# end %>-->
+  <!--</tbody>-->
+<!--</table>-->
+<!--<br>-->
+<!--&lt;!&ndash;<div style="background-position:center; position: center", class="with-delay">&ndash;&gt;-->
+  <!--&lt;!&ndash;<%#= link_to 'Создать Новое', new_for_man_path, class: "btn btn-mini btn-warning", type: "button"%>&ndash;&gt;-->
+<!--&lt;!&ndash;</div>&ndash;&gt;-->
+<!--<br>-->
