--- a/app/views/static_pages/women.html.erb
+++ b/app/views/static_pages/women.html.erb
@@ -4,25 +4,60 @@
 <button style="background-position:center; position: center", class="with-delay">
 <%= link_to 'Назад', :back, class: "btn btn-mini btn-info", type: "button" %>
 </button>
-<table>
-  <thead>
-  <tr>
-    <th>.</th>
-    <th>.</th>
-    <th colspan="3"></th>
-  </tr>
-  </thead>
 
-  <tbody>
-  <% @for_women.each do |for_woman| %>
-    <tr>
-      <td><%= link_to (image_tag for_woman.womanavtr.thumb.url), for_woman %></td>
-      <td><%= for_woman.name %></td>
-      <td><%= for_woman.description %></td>
-    </tr>
-  <% end %>
-  </tbody>
-</table><br><br>
+<h1>Женские Пижамы</h1>
+<br>
+<div class="catalog">
+  <div class="women_underwear">
+    <a href="assets/Pigiama_gimp_out_label.png" data-fancybox data-caption="Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit dolor earum dolores iste maxime asperiores reprehenderit obcaecati excepturi quis minus hic, vel magni nam, molestias, fugit quod explicabo? Expedita, totam!
+			"><img src="assets/Pigiama_gimp_out_label.png" alt="photo"/></a>
+    <h3>499 грн</h3>
+    <a href="#"></a>
+  </div>
+  <div class="women_underwear">
+    <a href="assets/Pigiama2_gimp_out_label.png" data-fancybox data-caption="Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit dolor earum dolores iste maxime asperiores reprehenderit obcaecati excepturi quis minus hic, vel magni nam, molestias, fugit quod explicabo? Expedita, totam!
+			"><img src="assets/Pigiama2_gimp_out_label.png" alt="photo"/></a>
+    <h3>499 грн</h3>
+  </div>
+  <div class="women_underwear">
+    <a href="assets/Pigiama3_gimp_out_label.png" data-fancybox data-caption="Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit dolor earum dolores iste maxime asperiores reprehenderit obcaecati excepturi quis minus hic, vel magni nam, molestias, fugit quod explicabo? Expedita, totam!
+			"><img src="assets/Pigiama3_gimp_out_label.png" alt="photo"/></a>
+    <h3>499 грн</h3>
+  </div>
+  <div class="women_underwear">
+    <a href="assets/Pigiama4_gimp_out_label.png" data-fancybox data-caption="Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit dolor earum dolores iste maxime asperiores reprehenderit obcaecati excepturi quis minus hic, vel magni nam, molestias, fugit quod explicabo? Expedita, totam!
+			"><img src="assets/Pigiama4_gimp_out_label.png" alt="photo"/></a>
+    <h3>499 грн</h3>
+  </div>
+
+  <div class="women_underwear">
+  <a href="assets/Pigiama5_gimp_out_label.png" data-fancybox data-caption="Lorem ipsum dolor sit amet,
+  consectetur adipisicing elit. Odit dolor earum dolores iste maxime asperiores reprehenderit obcaecati
+  excepturi quis minus hic, vel magni nam, molestias, fugit quod explicabo? Expedita, totam!">
+  <img src="assets/Pigiama5_gimp_out_label.png" alt="photo"/></a>
+  <h3>499 грн</h3>
+  </div>
+</div>
+
+<!--<table>-->
+  <!--<thead>-->
+  <!--<tr>-->
+    <!--<th>.</th>-->
+    <!--<th>.</th>-->
+    <!--<th colspan="3"></th>-->
+  <!--</tr>-->
+  <!--</thead>-->
+
+  <!--<tbody>-->
+  <!--<%# @for_women.each do |for_woman| %>-->
+    <!--<tr>-->
+      <!--<td><%#= link_to (image_tag for_woman.womanavtr.thumb.url), for_woman %></td>-->
+      <!--<td><%#= for_woman.name %></td>-->
+      <!--<td><%#= for_woman.description %></td>-->
+    <!--</tr>-->
+  <!--<%# end %>-->
+  <!--</tbody>-->
+<!--</table><br><br>-->
 
 <!--<div style="background-position:center; position: center", class="with-delay">-->
   <!--<%#= link_to 'Создать Новое', new_for_woman_path, class: "btn btn-mini btn-warning", type: "button"%>-->
