added some file

--- a/app/views/static_pages/adminka.html.erb
+++ b/app/views/static_pages/adminka.html.erb
@@ -70,7 +70,7 @@
 </table>
 <br>
 <div style="background-position:center; position: center", class="with-delay">
-  <%= link_to 'Создать Новое Женское', new_for_man_path, class: "btn btn-mini btn-warning", type: "button"%>
+  <%= link_to 'Создать Новое Мужское', new_for_man_path, class: "btn btn-mini btn-warning", type: "button"%>
 </div>
 <br>
 
@@ -105,7 +105,7 @@
 </table><br><br>
 
 <div style="background-position:center; position: center", class="with-delay">
-  <%= link_to 'Создать Новое Мужское', new_for_woman_path, class: "btn btn-mini btn-warning", type: "button"%>
+  <%= link_to 'Создать Новое Женское', new_for_woman_path, class: "btn btn-mini btn-warning", type: "button"%>
 </div>
 <br>
 
