--- a/app/views/static_pages/women.html.erb
+++ b/app/views/static_pages/women.html.erb
@@ -1,33 +1,34 @@
 <br><br><br>
+<%# @for_women.each do |for_woman| %>
 <h1>Женское Белье</h1>
 <br>
-<button style="background-position:center; position: center", class="with-delay">
+<button style="background-position:center; position: center;", class="with-delay">
 <%= link_to 'Назад', :back, class: "btn btn-mini btn-info", type: "button" %>
 </button>
 
-<h1>Женские Пижамы</h1>
+
 <br>
 <div class="catalog">
   <div class="women_underwear">
     <a href="assets/Pigiama_gimp_out_label.png" data-fancybox data-caption="Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit dolor earum dolores iste maxime asperiores reprehenderit obcaecati excepturi quis minus hic, vel magni nam, molestias, fugit quod explicabo? Expedita, totam!
 			"><img src="assets/Pigiama_gimp_out_label.png" alt="photo"/></a>
-    <h3>499 грн</h3>
+    <h3>330 грн</h3>
     <a href="#"></a>
   </div>
   <div class="women_underwear">
     <a href="assets/Pigiama2_gimp_out_label.png" data-fancybox data-caption="Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit dolor earum dolores iste maxime asperiores reprehenderit obcaecati excepturi quis minus hic, vel magni nam, molestias, fugit quod explicabo? Expedita, totam!
 			"><img src="assets/Pigiama2_gimp_out_label.png" alt="photo"/></a>
-    <h3>499 грн</h3>
+    <h3>330 грн</h3>
   </div>
   <div class="women_underwear">
     <a href="assets/Pigiama3_gimp_out_label.png" data-fancybox data-caption="Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit dolor earum dolores iste maxime asperiores reprehenderit obcaecati excepturi quis minus hic, vel magni nam, molestias, fugit quod explicabo? Expedita, totam!
 			"><img src="assets/Pigiama3_gimp_out_label.png" alt="photo"/></a>
-    <h3>499 грн</h3>
+    <h3>330 грн</h3>
   </div>
   <div class="women_underwear">
     <a href="assets/Pigiama4_gimp_out_label.png" data-fancybox data-caption="Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit dolor earum dolores iste maxime asperiores reprehenderit obcaecati excepturi quis minus hic, vel magni nam, molestias, fugit quod explicabo? Expedita, totam!
 			"><img src="assets/Pigiama4_gimp_out_label.png" alt="photo"/></a>
-    <h3>499 грн</h3>
+    <h3>390 грн</h3>
   </div>
 
   <div class="women_underwear">
@@ -35,9 +36,81 @@
   consectetur adipisicing elit. Odit dolor earum dolores iste maxime asperiores reprehenderit obcaecati
   excepturi quis minus hic, vel magni nam, molestias, fugit quod explicabo? Expedita, totam!">
   <img src="assets/Pigiama5_gimp_out_label.png" alt="photo"/></a>
-  <h3>499 грн</h3>
+  <h3>330 грн</h3>
+  </div>
+
+  <div class="women_underwear">
+    <a href="assets/Pigiama6_gimp_out_label.png" data-fancybox data-caption="Lorem ipsum dolor sit amet,
+  consectetur adipisicing elit. Odit dolor earum dolores iste maxime asperiores reprehenderit obcaecati
+  excepturi quis minus hic, vel magni nam, molestias, fugit quod explicabo? Expedita, totam!">
+      <img src="assets/Pigiama6_gimp_out_label.png" alt="photo"/></a>
+    <h3>330 грн</h3>
+  </div>
+
+  <div class="women_underwear">
+    <a href="assets/Pigiama7_gimp_out_label.png" data-fancybox data-caption="Lorem ipsum dolor sit amet,
+  consectetur adipisicing elit. Odit dolor earum dolores iste maxime asperiores reprehenderit obcaecati
+  excepturi quis minus hic, vel magni nam, molestias, fugit quod explicabo? Expedita, totam!">
+      <img src="assets/Pigiama7_gimp_out_label.png" alt="photo"/></a>
+    <h3>330 грн</h3>
+  </div>
+
+  <div class="women_underwear">
+    <a href="assets/Pigiama8_gimp_out_label.png" data-fancybox data-caption="Lorem ipsum dolor sit amet,
+  consectetur adipisicing elit. Odit dolor earum dolores iste maxime asperiores reprehenderit obcaecati
+  excepturi quis minus hic, vel magni nam, molestias, fugit quod explicabo? Expedita, totam!">
+      <img src="assets/Pigiama8_gimp_out_label.png" alt="photo"/></a>
+    <h3>330 грн</h3>
+  </div>
+
+  <div class="women_underwear">
+    <a href="assets/Pigiama9_gimp_out_label.png" data-fancybox data-caption="Lorem ipsum dolor sit amet,
+  consectetur adipisicing elit. Odit dolor earum dolores iste maxime asperiores reprehenderit obcaecati
+  excepturi quis minus hic, vel magni nam, molestias, fugit quod explicabo? Expedita, totam!">
+      <img src="assets/Pigiama9_gimp_out_label.png" alt="photo"/></a>
+    <h3>390 грн</h3>
+  </div>
+
+  <div class="women_underwear">
+    <a href="assets/Pigiama10_gimp_out_label.png" data-fancybox data-caption="Lorem ipsum dolor sit amet,
+  consectetur adipisicing elit. Odit dolor earum dolores iste maxime asperiores reprehenderit obcaecati
+  excepturi quis minus hic, vel magni nam, molestias, fugit quod explicabo? Expedita, totam!">
+      <img src="assets/Pigiama10_gimp_out_label.png" alt="photo"/></a>
+    <h3>330 грн</h3>
+  </div>
+
+  <div class="women_underwear">
+    <a href="assets/Pigiama11_gimp_out_label.png" data-fancybox data-caption="Lorem ipsum dolor sit amet,
+  consectetur adipisicing elit. Odit dolor earum dolores iste maxime asperiores reprehenderit obcaecati
+  excepturi quis minus hic, vel magni nam, molestias, fugit quod explicabo? Expedita, totam!">
+      <img src="assets/Pigiama11_gimp_out_label.png" alt="photo"/></a>
+    <h3>330 грн</h3>
+  </div>
+  
+  <div class="women_underwear">
+    <a href="assets/Pigiama12_gimp_out_label.png" data-fancybox data-caption="Lorem ipsum dolor sit amet,
+  consectetur adipisicing elit. Odit dolor earum dolores iste maxime asperiores reprehenderit obcaecati
+  excepturi quis minus hic, vel magni nam, molestias, fugit quod explicabo? Expedita, totam!">
+      <img src="assets/Pigiama12_gimp_out_label.png" alt="photo"/></a>
+    <h3>330 грн</h3>
+  </div>
+
+  <div class="women_underwear">
+    <a href="assets/Pigiama13_gimp_out_label.png" data-fancybox data-caption="Lorem ipsum dolor sit amet,
+  consectetur adipisicing elit. Odit dolor earum dolores iste maxime asperiores reprehenderit obcaecati
+  excepturi quis minus hic, vel magni nam, molestias, fugit quod explicabo? Expedita, totam!">
+      <img src="assets/Pigiama13_gimp_out_label.png" alt="photo"/></a>
+    <h3>330 грн</h3>
   </div>
 </div>
+
+
+<!--<div class="women_underwear">-->
+<!--<a  href ="<%#= image_tag @for_woman.womanavtr.thumb.url %>" data-fancybox data-caption="<%#= @for_woman.description %>">-->
+<!--<img src="<%#= link_to (image_tag for_woman.womanavtr.thumb.url), for_woman %>" alt="photo"/></a>-->
+<!--<h3><%#= @for_woman.name %></h3>-->
+<!--</div>-->
+
 
 <!--<table>-->
   <!--<thead>-->
