--- a/app/views/static_pages/women.html.erb
+++ b/app/views/static_pages/women.html.erb
@@ -86,7 +86,7 @@
       <img src="assets/Pigiama11_gimp_out_label.png" alt="photo"/></a>
     <h3>330 грн</h3>
   </div>
-  
+
   <div class="women_underwear">
     <a href="assets/Pigiama12_gimp_out_label.png" data-fancybox data-caption="Lorem ipsum dolor sit amet,
   consectetur adipisicing elit. Odit dolor earum dolores iste maxime asperiores reprehenderit obcaecati
@@ -102,7 +102,99 @@
       <img src="assets/Pigiama13_gimp_out_label.png" alt="photo"/></a>
     <h3>330 грн</h3>
   </div>
+
+  <div class="women_underwear">
+    <a href="assets/Pigiama14_gimp_out_label.png" data-fancybox data-caption="Lorem ipsum dolor sit amet,
+  consectetur adipisicing elit. Odit dolor earum dolores iste maxime asperiores reprehenderit obcaecati
+  excepturi quis minus hic, vel magni nam, molestias, fugit quod explicabo? Expedita, totam!">
+      <img src="assets/Pigiama14_gimp_out_label.png" alt="photo"/></a>
+    <h3>330 грн</h3>
+  </div>
+
+  <div class="women_underwear">
+    <a href="assets/Pigiama15_gimp_out_label.png" data-fancybox data-caption="Lorem ipsum dolor sit amet,
+  consectetur adipisicing elit. Odit dolor earum dolores iste maxime asperiores reprehenderit obcaecati
+  excepturi quis minus hic, vel magni nam, molestias, fugit quod explicabo? Expedita, totam!">
+      <img src="assets/Pigiama15_gimp_out_label.png" alt="photo"/></a>
+    <h3>330 грн</h3>
+  </div>
+
+  <div class="women_underwear">
+    <a href="assets/Pigiama16_gimp_out_label.png" data-fancybox data-caption="Lorem ipsum dolor sit amet,
+  consectetur adipisicing elit. Odit dolor earum dolores iste maxime asperiores reprehenderit obcaecati
+  excepturi quis minus hic, vel magni nam, molestias, fugit quod explicabo? Expedita, totam!">
+      <img src="assets/Pigiama16_gimp_out_label.png" alt="photo"/></a>
+    <h3>330 грн</h3>
+  </div>
+
+  <div class="women_underwear">
+    <a href="assets/Pigiama17_gimp_out_label.png" data-fancybox data-caption="Lorem ipsum dolor sit amet,
+  consectetur adipisicing elit. Odit dolor earum dolores iste maxime asperiores reprehenderit obcaecati
+  excepturi quis minus hic, vel magni nam, molestias, fugit quod explicabo? Expedita, totam!">
+      <img src="assets/Pigiama17_gimp_out_label.png" alt="photo"/></a>
+    <h3>330 грн</h3>
+  </div>
+
+  <div class="women_underwear">
+    <a href="assets/Pigiama18_gimp_out_label.png" data-fancybox data-caption="Lorem ipsum dolor sit amet,
+  consectetur adipisicing elit. Odit dolor earum dolores iste maxime asperiores reprehenderit obcaecati
+  excepturi quis minus hic, vel magni nam, molestias, fugit quod explicabo? Expedita, totam!">
+      <img src="assets/Pigiama18_gimp_out_label.png" alt="photo"/></a>
+    <h3>330 грн</h3>
+  </div>
+
+  <div class="women_underwear">
+    <a href="assets/Pigiama19_gimp_out_label.png" data-fancybox data-caption="Lorem ipsum dolor sit amet,
+  consectetur adipisicing elit. Odit dolor earum dolores iste maxime asperiores reprehenderit obcaecati
+  excepturi quis minus hic, vel magni nam, molestias, fugit quod explicabo? Expedita, totam!">
+      <img src="assets/Pigiama19_gimp_out_label.png" alt="photo"/></a>
+    <h3>330 грн</h3>
+  </div>
+
+  <div class="women_underwear">
+    <a href="assets/Pigiama20_gimp_out_label.png" data-fancybox data-caption="Lorem ipsum dolor sit amet,
+  consectetur adipisicing elit. Odit dolor earum dolores iste maxime asperiores reprehenderit obcaecati
+  excepturi quis minus hic, vel magni nam, molestias, fugit quod explicabo? Expedita, totam!">
+      <img src="assets/Pigiama20_gimp_out_label.png" alt="photo"/></a>
+    <h3>330 грн</h3>
+  </div>
+
+  <div class="women_underwear">
+    <a href="assets/Pigiama21_gimp_out_label.png" data-fancybox data-caption="Lorem ipsum dolor sit amet,
+  consectetur adipisicing elit. Odit dolor earum dolores iste maxime asperiores reprehenderit obcaecati
+  excepturi quis minus hic, vel magni nam, molestias, fugit quod explicabo? Expedita, totam!">
+      <img src="assets/Pigiama21_gimp_out_label.png" alt="photo"/></a>
+    <h3>330 грн</h3>
+  </div>
+
+  <div class="women_underwear">
+    <a href="assets/Pigiama22_gimp_out_label.png" data-fancybox data-caption="Lorem ipsum dolor sit amet,
+  consectetur adipisicing elit. Odit dolor earum dolores iste maxime asperiores reprehenderit obcaecati
+  excepturi quis minus hic, vel magni nam, molestias, fugit quod explicabo? Expedita, totam!">
+      <img src="assets/Pigiama22_gimp_out_label.png" alt="photo"/></a>
+    <h3>330 грн</h3>
+  </div>
+
+  <div class="women_underwear">
+    <a href="assets/Pigiama23_gimp_out_label.png" data-fancybox data-caption="Lorem ipsum dolor sit amet,
+  consectetur adipisicing elit. Odit dolor earum dolores iste maxime asperiores reprehenderit obcaecati
+  excepturi quis minus hic, vel magni nam, molestias, fugit quod explicabo? Expedita, totam!">
+      <img src="assets/Pigiama23_gimp_out_label.png" alt="photo"/></a>
+    <h3>330 грн</h3>
+  </div>
+
+  <div class="women_underwear">
+    <a href="assets/Pigiama24_gimp_out_label.png" data-fancybox data-caption="Lorem ipsum dolor sit amet,
+  consectetur adipisicing elit. Odit dolor earum dolores iste maxime asperiores reprehenderit obcaecati
+  excepturi quis minus hic, vel magni nam, molestias, fugit quod explicabo? Expedita, totam!">
+      <img src="assets/Pigiama24_gimp_out_label.png" alt="photo"/></a>
+    <h3>330 грн</h3>
+  </div>
+
+
+
 </div>
+
 
 
 <!--<div class="women_underwear">-->
