--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -48,12 +48,13 @@
 }
 
 .navbar-inner{
-  background: #403e04;;
+  background: #8c8a5f;
   padding: 0px;
 }
 
 .Logoimage{
   float: left;
+  padding-left: 35px;
 }
 
 //.p1 {
@@ -1517,9 +1518,9 @@ table {
 
 .menu {
   width: 100%;
-  max-width: 1920px;
+  max-width: 2400px;
   min-width: 800px;
-  background-color:#cae458; //#eeeeee;
+  background-color:#cae458;
   margin: 0 auto;
   min-height: 60px;
   text-align: center;
