--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -42,10 +42,11 @@
       <ul>
         <li><%= link_to "Главная",    home_path %></li>
         <li><%= link_to "О НАС",    about_path %></li>
-        <li><a href="#">Продукция</a>
+        <li><%= link_to "Мужское",    men_path %></li>
+        <li><a href="#">Женское</a>
           <ul class="submenu">
-            <li><%= link_to "Мужское",    men_path %></li>
-            <li><%= link_to "Женское",    women_path %></li>
+            <li><%= link_to "Пижамы",    women_path %></li>
+            <li><%= link_to "Майки",    women_t_shirts_path %></li>
           </ul>
         </li>
         <li><a href="#">Сервис</a>
