--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -88,25 +88,28 @@
 <br>
 <div class="catalog">
   <div class="women_underwear">
-    <a href="assets/Pigiama_gimp_out_label.png" data-fancybox data-caption="Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit dolor earum dolores iste maxime asperiores reprehenderit obcaecati excepturi quis minus hic, vel magni nam, molestias, fugit quod explicabo? Expedita, totam!
+    <a href="assets/Pigiama_gimp_out_label.png" data-fancybox data-caption="Цена - 330грн<br> code: 3001
 			"><img src="assets/Pigiama_gimp_out_label.png" alt="photo"/></a>
     <h3>330 грн</h3>
-    <a href="#"></a>
+    <h4>code: 3001</h4>
   </div>
   <div class="women_underwear">
-    <a href="assets/Pigiama2_gimp_out_label.png" data-fancybox data-caption="Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit dolor earum dolores iste maxime asperiores reprehenderit obcaecati excepturi quis minus hic, vel magni nam, molestias, fugit quod explicabo? Expedita, totam!
+    <a href="assets/Pigiama2_gimp_out_label.png" data-fancybox data-caption="Цена - 330грн<br> code: 3002
 			"><img src="assets/Pigiama2_gimp_out_label.png" alt="photo"/></a>
     <h3>330 грн</h3>
+    <h4>code: 3002</h4>
   </div>
   <div class="women_underwear">
-    <a href="assets/Pigiama3_gimp_out_label.png" data-fancybox data-caption="Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit dolor earum dolores iste maxime asperiores reprehenderit obcaecati excepturi quis minus hic, vel magni nam, molestias, fugit quod explicabo? Expedita, totam!
+    <a href="assets/Pigiama3_gimp_out_label.png" data-fancybox data-caption="Цена - 330грн<br> code: 3003
 			"><img src="assets/Pigiama3_gimp_out_label.png" alt="photo"/></a>
     <h3>330 грн</h3>
+    <h4>code: 3003</h4>
   </div>
   <div class="women_underwear">
-    <a href="assets/Pigiama4_gimp_out_label.png" data-fancybox data-caption="Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit dolor earum dolores iste maxime asperiores reprehenderit obcaecati excepturi quis minus hic, vel magni nam, molestias, fugit quod explicabo? Expedita, totam!
+    <a href="assets/Pigiama4_gimp_out_label.png" data-fancybox data-caption="Цена - 390грн<br> code: 3025
 			"><img src="assets/Pigiama4_gimp_out_label.png" alt="photo"/></a>
     <h3>390 грн</h3>
+    <h4>code: 3025</h4>
   </div>
 
   <!--<div class="women_underwear">-->
@@ -118,6 +121,58 @@
   <!--</div>-->
 </div>
 <hr>
+
+<!--Женские Майки///-->
+<br> <br>
+<h1>Женские Майки</h1>
+<br>
+<div class="catalog">
+  <div class="women_t_shirts">
+    <a href="assets/female_T-shirt1_2011_white_S_M_L_XL_80__2XXL_85grn.png" data-fancybox data-caption="
+    На Белый Цвет и На Размеры: S-M-L-XL -> Цена - 85грн
+    <br>
+    На Белый Цвет и На Размер: 2XXL -> Цена - 85грн
+    <br>
+    code: 2011
+			"><img src="assets/female_T-shirt1_2011_white_S_M_L_XL_80__2XXL_85grn.png" alt="photo"/></a>
+    <h3>80 грн</h3>
+    <h4>code: 2011</h4>
+  </div>
+
+  <div class="women_t_shirts">
+    <a href="assets/female_T-shirt1_2016_Red_S_M_L_XL_80grn.png" data-fancybox data-caption="
+    На Красный Цвет и На Размеры: S-M-L-XL -> Цена - 80грн
+    <br>
+    code: 2016
+			"><img src="assets/female_T-shirt1_2016_Red_S_M_L_XL_80grn.png" alt="photo"/></a>
+    <h3>80 грн</h3>
+    <h4>code: 2016</h4>
+  </div>
+
+  <div class="women_t_shirts">
+    <a href="assets/female_T-shirt1_2037_White_3XL_90__2XXL_85grn.png" data-fancybox data-caption="
+     На Белый Цвет и На Размер: 2XXL -> Цена - 85грн
+    <br>
+     На Белый Цвет и На Размер: 3XL -> Цена - 90грн
+    <br>
+    code: 2037
+    "><img src="assets/female_T-shirt1_2037_White_3XL_90__2XXL_85grn.png" alt="photo"/></a>
+    <h3>85 грн</h3>
+    <h4>code: 3037</h4>
+  </div>
+
+  <div class="women_t_shirts">
+    <a href="assets/female_T-shirt1_2127_White_S_M_L_XL_95grn.png" data-fancybox data-caption="
+    На Белый Цвет и На Размеры: S-M-L-XL -> Цена - 95грн
+    <br>
+    code: 2127
+    "><img src="assets/female_T-shirt1_2127_White_S_M_L_XL_95grn.png" alt="photo"/></a>
+    <h3>95 грн</h3>
+    <h4>code: 2127</h4>
+  </div>
+
+</div>
+<hr>
   <!--Мужское белье///-->
 <h1>Мужское белье</h1>
 <br>
@@ -125,29 +180,24 @@
   <div class="men_underwear">
     <a href="assets/Men_underwear1_gimp_out_label.png" data-fancybox data-caption="Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit dolor earum dolores iste maxime asperiores reprehenderit obcaecati excepturi quis minus hic, vel magni nam, molestias, fugit quod explicabo? Expedita, totam!
 			"><img src="assets/Men_underwear1_gimp_out_label.png" alt="photo"/></a>
-    <h3>499 грн</h3>
+    <h3>120 грн</h3>
   </div>
   <div class="men_underwear">
     <a href="assets/Men_underwear2_gimp_out_label.png" data-fancybox data-caption="Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit dolor earum dolores iste maxime asperiores reprehenderit obcaecati excepturi quis minus hic, vel magni nam, molestias, fugit quod explicabo? Expedita, totam!
 			"><img src="assets/Men_underwear2_gimp_out_label.png" alt="photo"/></a>
-    <h3>499 грн</h3>
+    <h3>120 грн</h3>
   </div>
   <div class="men_underwear">
     <a href="assets/Men_underwear3_gimp_out_label.png" data-fancybox data-caption="Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit dolor earum dolores iste maxime asperiores reprehenderit obcaecati excepturi quis minus hic, vel magni nam, molestias, fugit quod explicabo? Expedita, totam!
 			"><img src="assets/Men_underwear3_gimp_out_label.png" alt="photo"/></a>
-    <h3>499 грн</h3>
+    <h3>120 грн</h3>
   </div>
   <div class="men_underwear">
     <a href="assets/Men_underwear4_gimp_out_label.png" data-fancybox data-caption="Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit dolor earum dolores iste maxime asperiores reprehenderit obcaecati excepturi quis minus hic, vel magni nam, molestias, fugit quod explicabo? Expedita, totam!
 			"><img src="assets/Men_underwear4_gimp_out_label.png" alt="photo"/></a>
-    <h3>499 грн</h3>
+    <h3>120 грн</h3>
   </div>
 
-  <!--<div class="men_underwear">-->
-    <!--<a href="assets/Men_underwear5_gimp_out_label.png" data-fancybox data-caption="Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit dolor earum dolores iste maxime asperiores reprehenderit obcaecati excepturi quis minus hic, vel magni nam, molestias, fugit quod explicabo? Expedita, totam!-->
-			<!--"><img src="assets/Men_underwear5_gimp_out_label.png" alt="photo"/></a>-->
-    <!--<h3>499 грн</h3>-->
-  <!--</div>-->
 </div>
 
 
