--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -199,43 +199,6 @@
   </div>
 
 </div>
-
-
-
-
-<!--Мужское и Женское на Руби///////////////////////////////////////-->
-<!--<div class="slider">-->
-  <!--<%# @products.each do |product|%>-->
-    <!--<div class="slide">-->
-        <!--<%#= image_tag product.image.url  alt: "slide1"  %>-->
-        <!--<br><br>-->
-    <!--</div>-->
-    <!--<%# end %>-->
-  <!--</div>-->
-
-<!--<div class="catalog">-->
-
-  <!--<div>-->
-    <!--<%# @for_men.each do |for_man| %>-->
-    <!--<a href=""  data-fancybox data-caption="(<%#= for_man.description %>)">-->
-    <!--<%#= image_tag for_man.avatar.thumb.url %>-->
-    <!--</a>-->
-    <!--<h3><%#= for_man.name %></h3>-->
-    <!--<h3></h3>-->
-  <!--</div>-->
-    <!--<%# end %>-->
-
-    <!--<div>-->
-      <!--<%# @for_women.each do |for_woman| %>-->
-        <!--<a href=""  data-fancybox data-caption="<%#= for_woman.description %>">-->
-          <!--<%#= image_tag for_woman.womanavtr.thumb.url %>-->
-        <!--</a>-->
-        <!--<h3><%#= for_woman.name %></h3>-->
-        <!--<h3></h3>-->
-        <!--</div>-->
-      <!--<%# end %>-->
-  <!--</div>-->
-
   <br>
 
 <!--Footer///////////////////////////////////////////////////////////-->
@@ -243,10 +206,10 @@
 </br>
 <footer>
   <div class="service">
-    <h3>Сервис</h3>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero laudantium at fugiat,
-      consectetur iure repudiandae! Earum illum laborum atque, quod odit, quam reprehenderit ut perspiciatis!
-      Optio at porro atque consequatur.</p>
+    <!--<h3>Сервис</h3>-->
+    <!--<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero laudantium at fugiat,-->
+      <!--consectetur iure repudiandae! Earum illum laborum atque, quod odit, quam reprehenderit ut perspiciatis!-->
+      <!--Optio at porro atque consequatur.</p>-->
   </div>
   <div class="contacts">
     <h3>Контакты</h3>
@@ -254,8 +217,8 @@
     <p>Александр</p>
 
     <h3>Поделиться</h3>
-    <a href="#"><img src="assets/facebook.png" alt="facebook"></a>
-    <a href="#"><img src="assets/instagram.png" alt="instagram"></a>
+    <a href="https://www.facebook.com/Underwear-196240304295770/"><img src="assets/facebook.png" alt="facebook"></a>
+    <a href="https://www.instagram.com/underwear_for_her_and_him/"><img src="assets/instagram.png" alt="instagram"></a>
     <h3>Где нас можно найти?</h3>
     <p>Г. Одесса, промрынок "7 км", ул Престижная, 455.</p>
     <p>Ассортимент на сайте может отличаться от фактического.</p>
