--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -47,6 +47,7 @@
           <ul class="submenu">
             <li><%= link_to "Пижамы",    women_path %></li>
             <li><%= link_to "Майки",    women_t_shirts_path %></li>
+            <li><%= link_to "Женское Белье",    womens_underwear_path %></li>
           </ul>
         </li>
         <li><a href="#">Сервис</a>
