--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -112,13 +112,6 @@
     <h4>code: 3025</h4>
   </div>
 
-  <!--<div class="women_underwear">-->
-    <!--<a href="assets/Pigiama5_gimp_out_label.png" data-fancybox data-caption="Lorem ipsum dolor sit amet, -->
-    <!--consectetur adipisicing elit. Odit dolor earum dolores iste maxime asperiores reprehenderit obcaecati -->
-    <!--excepturi quis minus hic, vel magni nam, molestias, fugit quod explicabo? Expedita, totam!">-->
-      <!--<img src="assets/Pigiama5_gimp_out_label.png" alt="photo"/></a>-->
-    <!--<h3>499 грн</h3>-->
-  <!--</div>-->
 </div>
 <hr>
 
@@ -178,29 +171,82 @@
 <br>
 <div class="catalog">
   <div class="men_underwear">
-    <a href="assets/Men_underwear1_gimp_out_label.png" data-fancybox data-caption="Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit dolor earum dolores iste maxime asperiores reprehenderit obcaecati excepturi quis minus hic, vel magni nam, molestias, fugit quod explicabo? Expedita, totam!
-			"><img src="assets/Men_underwear1_gimp_out_label.png" alt="photo"/></a>
-    <h3>120 грн</h3>
+    <a href="assets/Men1_underwear_4476_black_Dark blue_Burgundy_rose_Purple_Bright blue__Gray_Dark blue_85grn.png" data-fancybox data-caption="
+    Цена - 85грн на цвета: Черный, Темно-синий, Бордовый, Роза, Фиолетовый, Ярко-синий, Серый, Тёмно-синий <br> code: 4476
+			"><img src="assets/Men1_underwear_4476_black_Dark blue_Burgundy_rose_Purple_Bright blue__Gray_Dark blue_85grn.png" alt="photo"/></a>
+    <h3>85 грн</h3>
+    <h4>code: 4476</h4>
   </div>
   <div class="men_underwear">
-    <a href="assets/Men_underwear2_gimp_out_label.png" data-fancybox data-caption="Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit dolor earum dolores iste maxime asperiores reprehenderit obcaecati excepturi quis minus hic, vel magni nam, molestias, fugit quod explicabo? Expedita, totam!
-			"><img src="assets/Men_underwear2_gimp_out_label.png" alt="photo"/></a>
-    <h3>120 грн</h3>
+    <a href="assets/Men2_underwear_4480_standart_80grn.png" data-fancybox data-caption="
+     Цена - 80грн, цвет: стандартный<br> code: 4480
+			"><img src="assets/Men2_underwear_4480_standart_80grn.png" alt="photo"/></a>
+    <h3>80 грн</h3>
+    <h4>code: 4480</h4>
   </div>
   <div class="men_underwear">
-    <a href="assets/Men_underwear3_gimp_out_label.png" data-fancybox data-caption="Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit dolor earum dolores iste maxime asperiores reprehenderit obcaecati excepturi quis minus hic, vel magni nam, molestias, fugit quod explicabo? Expedita, totam!
-			"><img src="assets/Men_underwear3_gimp_out_label.png" alt="photo"/></a>
+    <a href="assets/Men_underwear_4413_standart_120grn.png" data-fancybox data-caption="
+    Цена - 80грн, цвет: стандартный<br> code: 4480
+			"><img src="assets/Men_underwear_4413_standart_120grn.png" alt="photo"/></a>
     <h3>120 грн</h3>
+    <h4>code: 4413</h4>
   </div>
   <div class="men_underwear">
-    <a href="assets/Men_underwear4_gimp_out_label.png" data-fancybox data-caption="Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit dolor earum dolores iste maxime asperiores reprehenderit obcaecati excepturi quis minus hic, vel magni nam, molestias, fugit quod explicabo? Expedita, totam!
-			"><img src="assets/Men_underwear4_gimp_out_label.png" alt="photo"/></a>
-    <h3>120 грн</h3>
+    <a href="assets/Men_underwear_4416_dark blue_85grn.png" data-fancybox data-caption="
+    Цена - 85грн, цвет: Темно Синий<br> code: 4416
+			"><img src="assets/Men_underwear_4416_dark blue_85grn.png" alt="photo"/></a>
+    <h3>85 грн</h3>
+    <h4>code: 4416</h4>
   </div>
-
 </div>
   <br>
 
+<hr>
+<!--Мужское белье///-->
+<h1>Женское белье</h1>
+<br>
+<div class="catalog">
+  <div class="men_underwear">
+    <a href="assets/Women_underwear_11255_25grn.png" data-fancybox data-caption="
+    На Размеры: L-M -> Цена - 25грн
+    <br>
+    code: 11255
+			"><img src="assets/Women_underwear_11255_25grn.png" alt="photo"/></a>
+    <h3>25 грн</h3>
+    <h4>code: 11255</h4>
+  </div>
+
+  <div class="men_underwear">
+    <a href="assets/Women_underwear_11257_L_M_35grn.png" data-fancybox data-caption="
+    На Размеры: L-M -> Цена - 35грн
+    <br>
+    code: 11257
+			"><img src="assets/Women_underwear_11257_L_M_35grn.png" alt="photo"/></a>
+    <h3>35 грн</h3>
+    <h4>code: 11257</h4>
+  </div>
+
+  <div class="men_underwear">
+    <a href="assets/Women_underwear_11258_L_M_35grn.png" data-fancybox data-caption="
+    На Размеры: L-M -> Цена - 35грн
+    <br>
+    code: 11258
+			"><img src="assets/Women_underwear_11258_L_M_35grn.png" alt="photo"/></a>
+    <h3>35 грн</h3>
+    <h4>code: 11258</h4>
+  </div>
+
+  <div class="men_underwear">
+    <a href="assets/Women_underwear_11259_S_M_L_XL_40grn.png" data-fancybox data-caption="
+    На Размеры: S-M-L-XL -> Цена - 40грн
+    <br>
+    code: 11259
+			"><img src="assets/Women_underwear_11259_S_M_L_XL_40grn.png" alt="photo"/></a>
+    <h3>40 грн</h3>
+    <h4>code: 11259</h4>
+  </div>
+</div>
+<br>
 <!--Footer///////////////////////////////////////////////////////////-->
 <br><br>
 </br>
