--- a/app/views/static_pages/men.html.erb
+++ b/app/views/static_pages/men.html.erb
@@ -1,4 +1,4 @@
-<br><br><br>
+<br><br><br><br>
 <h1>Мужское Белье</h1>
 
 
@@ -10,30 +10,56 @@
 <br>
 <div class="catalog">
   <div class="men_underwear">
-    <a href="assets/Men_underwear1_gimp_out_label.png" data-fancybox data-caption="Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit dolor earum dolores iste maxime asperiores reprehenderit obcaecati excepturi quis minus hic, vel magni nam, molestias, fugit quod explicabo? Expedita, totam!
-			"><img src="assets/Men_underwear1_gimp_out_label.png" alt="photo"/></a>
-    <h3>120 грн</h3>
+    <a href="assets/Men1_underwear_4476_black_Dark blue_Burgundy_rose_Purple_Bright blue__Gray_Dark blue_85grn.png" data-fancybox data-caption="
+    Цена - 85грн на цвета: Черный, Темно-синий, Бордовый, Роза, Фиолетовый, Ярко-синий, Серый, Тёмно-синий <br> code: 4476
+			"><img src="assets/Men1_underwear_4476_black_Dark blue_Burgundy_rose_Purple_Bright blue__Gray_Dark blue_85grn.png" alt="photo"/></a>
+    <h3>85 грн</h3>
+    <h4>code: 4476</h4>
   </div>
   <div class="men_underwear">
-    <a href="assets/Men_underwear2_gimp_out_label.png" data-fancybox data-caption="Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit dolor earum dolores iste maxime asperiores reprehenderit obcaecati excepturi quis minus hic, vel magni nam, molestias, fugit quod explicabo? Expedita, totam!
-			"><img src="assets/Men_underwear2_gimp_out_label.png" alt="photo"/></a>
-    <h3>120 грн</h3>
+    <a href="assets/Men2_underwear_4480_standart_80grn.png" data-fancybox data-caption="
+     Цена - 80грн, цвет: стандартный<br> code: 4480
+			"><img src="assets/Men2_underwear_4480_standart_80grn.png" alt="photo"/></a>
+    <h3>80 грн</h3>
+    <h4>code: 4480</h4>
   </div>
   <div class="men_underwear">
-    <a href="assets/Men_underwear3_gimp_out_label.png" data-fancybox data-caption="Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit dolor earum dolores iste maxime asperiores reprehenderit obcaecati excepturi quis minus hic, vel magni nam, molestias, fugit quod explicabo? Expedita, totam!
-			"><img src="assets/Men_underwear3_gimp_out_label.png" alt="photo"/></a>
+    <a href="assets/Men_underwear_4413_standart_120grn.png" data-fancybox data-caption="
+    Цена - 80грн, цвет: стандартный<br> code: 4480
+			"><img src="assets/Men_underwear_4413_standart_120grn.png" alt="photo"/></a>
     <h3>120 грн</h3>
+    <h4>code: 4413</h4>
   </div>
   <div class="men_underwear">
-    <a href="assets/Men_underwear4_gimp_out_label.png" data-fancybox data-caption="Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit dolor earum dolores iste maxime asperiores reprehenderit obcaecati excepturi quis minus hic, vel magni nam, molestias, fugit quod explicabo? Expedita, totam!
-			"><img src="assets/Men_underwear4_gimp_out_label.png" alt="photo"/></a>
-    <h3>120 грн</h3>
+    <a href="assets/Men_underwear_4416_dark blue_85grn.png" data-fancybox data-caption="
+    Цена - 85грн, цвет: Темно Синий<br> code: 4416
+			"><img src="assets/Men_underwear_4416_dark blue_85grn.png" alt="photo"/></a>
+    <h3>85 грн</h3>
+    <h4>code: 4416</h4>
   </div>
 
   <div class="men_underwear">
-  <a href="assets/Men_underwear5_gimp_out_label.png" data-fancybox data-caption="Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit dolor earum dolores iste maxime asperiores reprehenderit obcaecati excepturi quis minus hic, vel magni nam, molestias, fugit quod explicabo? Expedita, totam!
-  "><img src="assets/Men_underwear5_gimp_out_label.png" alt="photo"/></a>
+  <a href="assets/Men_underwear_4457_dark blue_120grn.png" data-fancybox data-caption="
+  Цена - 120грн, цвет: стандартный<br> code: 4457
+  "><img src="assets/Men_underwear_4457_dark blue_120grn.png" alt="photo"/></a>
   <h3>120 грн</h3>
+    <h4>code: 4457</h4>
+  </div>
+
+  <div class="men_underwear">
+    <a href="assets/Men_underwear_4458_red_120grn.png" data-fancybox data-caption="
+  Цена - 120грн, цвет: красный<br> code: 4458
+  "><img src="assets/Men_underwear_4458_red_120grn.png" alt="photo"/></a>
+    <h3>120 грн</h3>
+    <h4>code: 4458</h4>
+  </div>
+
+  <div class="men_underwear">
+    <a href="assets/Men_underwear_4459_dark blue_120grn.png" data-fancybox data-caption="
+  Цена - 120грн, цвет: Тёмно синий<br> code: 4459
+  "><img src="assets/Men_underwear_4459_dark blue_120grn.png" alt="photo"/></a>
+    <h3>120 грн</h3>
+    <h4>code: 4459</h4>
   </div>
 </div>
 
